[gd_scene load_steps=8 format=2]

[ext_resource path="res://SummonLaser.gd" type="Script" id=1]
[ext_resource path="res://Assets/Beholder/laser_ball_green.png" type="Texture" id=2]
[ext_resource path="res://Music/Beholder/laser.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 4 )

[node name="SummonLaser" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Wall" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
shape = SubResource( 2 )

[node name="Player" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 3 )

[node name="Enemy" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
shape = SubResource( 4 )

[node name="LaserBallGreen" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
autoplay = true

[connection signal="body_entered" from="Wall" to="." method="_on_Wall_body_entered"]
[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]
[connection signal="body_entered" from="Enemy" to="." method="_on_Enemy_body_entered"]
